src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>CPF_CNPJ__c</fullName>
        <externalId>true</externalId>
        <label>CPF / CNPJ</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DateLastUpdate__c</fullName>
        <label>Data Última Atualização</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Sexo</label>
        <picklist>
            <picklistValues>
                <fullName>Masculino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feminino</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GoldCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cliente Ouro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LuizaCode__c</fullName>
        <externalId>true</externalId>
        <label>LuizaCode</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingComplement__c</fullName>
        <label>Complemento de Cobrança</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NickName__c</fullName>
        <label>Nick Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profession__c</fullName>
        <label>Profissão</label>
        <picklist>
            <picklistValues>
                <fullName>ADMINISTRADOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADMINISTRADOR DE EDIFICIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADMINISTRADOR DE EXPLORACAO AGRICOLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADMINISTRADORES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADVOGADO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADVOGADO DIREITO DO TRABALHO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENCIADOR DE PROPAGANDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENTE ADMINISTRATIVO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENTE DE COMPRAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENTE DE VENDA DE SERVICOS AS EMPRESAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENTE DE VIAGEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENTE PUBLICITARIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENTE TECNICO DE VENDAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENTES ADMINISTRATIVOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENTES DE ADMINISTRACAO DE EMPRESAS PUBLICAS E PRIVADAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALMOXARIFE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANALISTA DE CARGOS E SALARIOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANALISTA DE COMERCIALIZACAO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANALISTA DE COMUNICACA 8234    ANALISTA DE CREDITO E COBRANCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANALISTA DE IMPORTACAO E EXPORTACAO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANALISTA DE OCUPACAO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANALISTA DE ORGANIZACAO E METODOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANALISTA DE PESQUISA DE MERCADO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANALISTA DE RECURSOS HUMANOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANALISTA DE SEGUROS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANALISTA DE SISTEMAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANALISTA DE SUPORTE DE SISTEMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APONTADOR DE MAO DE OBRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APONTADOR DE PRODUCAO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARQUITETO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RG__c</fullName>
        <label>RG</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CNPJ</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CPF_CNPJ__c</columns>
        <filterScope>Everything</filterScope>
        <label>CNPJ</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>